feat: jwt authentication
* chore: implement spring security jwt auth

*chore: add Spring Security and JWT dependencies

*chore: add JWT Service

*chore: add JWT request filter

* chore: implement custom exceptions

* feat: login endpoint at POST /login

* feat: whoami endpoint

* refactor: create jwt conf class
