# src/main/java/com/vaika/api/repository/model/User.java
@@ -1,0 +1,16 @@
+package com.vaika.api.repository.model;
+
+import jakarta.persistence.Entity;
+import jakarta.persistence.Id;
+import lombok.Getter;
+import lombok.Setter;
+
+@Entity(name = "\"user\"")
+@Getter
+@Setter
+public class User {
+  @Id private String id;
+  private String username;
+  private String email;
+  private String password;
+}
